# brewmasters-brixelizer-test

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
App/: main.cpp
App/Game/: PlayerController.hpp
App/Layers/: AppLayer.cpp  AppLayer.hpp  BrixelizerLayer.cpp
Engine/: BrixelizerShader.hpp  Camera.hpp  DXCShaderCompiler.hpp  DXException.hpp  ImGuiManager.hpp  LightingShader.hpp  Mathf.hpp  Mesh.hpp  Model.hpp  Shader.hpp  ShaderCompiler.hpp  ShaderInclude.hpp  Texture.cpp  Texture.hpp
Engine/Brixelizer/: BrixelizerContext.cpp  BrixelizerContext.hpp  BrixelizerGIContext.hpp  BrixelizerUtils.hpp  FfxContext.hpp  GBuffer.hpp
Engine/Core/: Application.cpp  Application.hpp  DX12Manager.hpp  Event.hpp  Layer.cpp  Layer.hpp  Timer.hpp  Window.cpp  Window.hpp
Engine/Input/: InputEvents.hpp  UserInput.hpp
Engine/Plugins/DirectX/: d3dx12_core.h
Engine/Plugins/FidelityFX/lib/: ffx_backend_dx12_x64.lib  ffx_backend_dx12_x64d.lib  ffx_backend_dx12_x64drel.lib  ffx_brixelizer_x64.lib  ffx_brixelizer_x64d.lib  ffx_brixelizer_x64drel.lib  ffx_brixelizergi_x64.lib  ffx_brixelizergi_x64d.lib  ffx_brixelizergi_x64drel.lib
Engine/Renderer/: Pass.hpp  RenderGraph.hpp  Renderer.hpp
Engine/Renderer/Util/: stb_image.cpp
Engine/Resources/Shaders/: Basic.hlsl  BrixelizerSDFVisualization.hlsl  GBuffer.hlsl  Lighting.hlsl
Engine/Scene/: SceneBuilder.hpp
Samples/brixelizer-gi/brixelizergi/: brixelizergirendermodule.cpp
